fix(cors): proxy /api and normalize auth endpoints, closes #176